--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-crewai==0.1.50
-chromadb==0.3.26
+streamlit
+crewai
 langchain-community
+#chromadb
+requests
+speechrecognition
+pydub
 faiss-cpu
 huggingface-hub
