--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-streamlit>=1.32.0
-crewai>=0.28.8
-chromadb>=0.4.15,<0.5.0
-langchain-core>=0.1.0
-langchain-community>=0.0.20
-langchain>=0.1.0
-huggingface-hub>=0.19.0
-requests>=2.31.0
-python-dotenv>=1.0.0
-SpeechRecognition>=3.10.0
-pydub>=0.25.1
-grpcio>=1.62.0
-protobuf>=3.20.0,<4.0.0
+streamlit==1.32.0
+crewai==0.28.8
+chromadb==0.4.15
+langchain-core==0.1.0
+langchain-community==0.0.20
+huggingface-hub==0.19.0
+requests==2.31.0
+SpeechRecognition==3.10.0
+pydub==0.25.1
+grpcio==1.62.0
+protobuf==3.20.3
