--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-streamlit==1.32.0
-crewai==0.28.8
-chromadb==0.4.15
-langchain-core==0.1.0
-langchain-community==0.0.20
-huggingface-hub==0.19.0
-requests==2.31.0
-SpeechRecognition==3.10.0
-pydub==0.25.1
-grpcio==1.62.0
-protobuf==3.20.3
-tiktoken==0.5.2
+streamlit
+crewai
+langchain
+langchain-community
+requests
+speechrecognition
+pydub
+faiss-cpu
+numpy
