--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-streamlit
-crewai
-langchain-core
-langchain-community
-huggingface-hub
-requests
-SpeechRecognition
-pydub
-chromadb
-grpcio
-protobuf
-tiktoken
+streamlit>=1.32.0
+crewai>=0.28.8
+langchain-community>=0.0.29
+huggingface-hub>=0.20.2
+sentence-transformers>=2.2.2
+faiss-cpu>=1.7.4
+SpeechRecognition>=3.10.0
+pydub>=0.25.1
+requests>=2.31.0
+python-dotenv>=1.0.0
