--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 streamlit
-crewai==0.28.8
-langchain-community==0.0.29
+crewai
+langchain-community
+chromadb
 requests
 speechrecognition
 pydub
 faiss-cpu
+huggingface-hub
